--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -11,7 +11,7 @@
     <div class="container" *ngIf="registerMode">
         <div class="row justify-content-center">
             <div class="col-4">
-                <app-register></app-register>
+                <app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegisterMode($event)"></app-register>
             </div>
         </div>
     </div>
