--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,18 +1,28 @@
 <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
-    <div class="form-grop">
-        <input type="text" class="form-control" name="username" 
-        [(ngModel)]="model.username"
+    <div class="form-group">
+        <input type="text" class="form-control" 
+        name="username" [(ngModel)]="model.username" 
         placeholder="Username">
+    </div>
 
-        <input type="password" class="form-control mt-1" name="password" 
-        [(ngModel)]="model.password"
+    <div class="form-group">
+        <select class="form-control">
+            <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">
+                {{user.userName}}
+            </option>
+        </select>
+    </div>
+
+    <div class="form-group">
+        <input type="password" class="form-control" 
+        name="password" [(ngModel)]="model.password" 
         placeholder="Password">
+    </div>
 
-        <div class="form-group text-center mt-1">
-            <button class="btn btn-success mr-2" style="margin-right: 5px;" type="submit">Register</button>
-            <button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
-        </div>
+    <div class="form-group text-center mt-1">
+        <button class="btn btn-success mr-2" style="margin-right: 5px;" type="submit">Register</button>
+        <button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
