--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,16 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
             <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
-              <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/members" routerLinkActive="active">Mathces</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
-                </li>
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <ng-container *ngIf="accountService.currentUser$ | async">
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Mathces</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+                  </li>
+                </ng-container>
               </ul>
 
               <div class="btn-group" *ngIf="accountService.currentUser$ | async" dropdown>
