--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary" style="padding-top: 5px; padding-bottom: 5px;">
     <div class="container">
             <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
               <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -15,9 +15,9 @@
                 </ng-container>
               </ul>
 
-              <div class="btn-group" *ngIf="accountService.currentUser$ | async" dropdown>
+              <div class="btn-group" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
                 <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-                        aria-controls="dropdown-basic">Welcome user<span class="caret"></span>
+                        aria-controls="dropdown-basic">Welcome {{user.username | titlecase}}<span class="caret"></span>
                 </button>
                 <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                     role="menu">
@@ -42,7 +42,7 @@
                     class="form-control me-2" 
                     type="password" 
                     placeholder="Password">
-                <button class="btn btn-outline-success" type="submit">Login</button>
+                <button class="btn btn-success" type="submit">Login</button>
               </form>
             </div>
   </nav>
