--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -30,4 +30,25 @@
             </div>
         </div>
     </div>
+
+    <div class="col-8">
+        <tabset class="member-tabset">
+            <tab heading='About {{ member.knownAs }}'>
+                <h4>Description</h4>
+                <p>{{ member.introduction }}</p>
+                <h4>Looking for</h4>
+                <p>{{ member.lookingFor }}</p>
+            </tab>
+            <tab heading='Interests'>
+                <h4>Interests</h4>
+                <p>{{ member.interests }}</p>
+            </tab>
+            <tab heading='Photos'>
+                <p>photo gallery: in dev</p>
+            </tab>
+            <tab heading='Messages'>
+                <p>messages gallery: in dev</p>
+            </tab>
+        </tabset>
+    </div>
 </div>
