--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -44,7 +44,8 @@
                 <p>{{ member.interests }}</p>
             </tab>
             <tab heading='Photos'>
-                <p>photo gallery: in dev</p>
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" 
+                style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Messages'>
                 <p>messages gallery: in dev</p>
