added member-edit component

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
                 </button>
                 <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
                     role="menu">
-                  <li role="menuitem"><a class="dropdown-item" href="#">Edit Profile</a></li>
+                  <li role="menuitem"><a class="dropdown-item" href="/member/edit">Edit Profile</a></li>
                   <li class="divider dropdown-divider"></li>
                   <li role="menuitem"><a class="dropdown-item" href="#" (click)="logout()">Logout</a>
                   </li>
