added some more style for member-edit, added upd

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,8 +3,8 @@
         <h1>Your profile</h1>
     </div>
     <div class="col-8">
-        <div class="alert alert-info">
-            <p><strong>Information: </strong> You have made changes. Any unsaved changes will be lost </p>
+        <div class="alert alert-info" *ngIf="editForm.dirty">
+            <strong>Information: </strong> You have made changes. Any unsaved changes will be lost
         </div>
     </div>
     <div class="col-4">
@@ -31,7 +31,9 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button class="btn btn-success btn-block">Save changes</button>
+                <div class="btn-group d-flex">
+                    <button form="editForm" class="btn btn-success btn-block" [disabled]="!editForm.dirty">Save changes</button>
+                </div>
             </div>
         </div>
     </div>
@@ -39,7 +41,7 @@
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading='About {{ member.knownAs }}'>
-                <form>
+                <form id="editForm" #editForm="ngForm" (ngSubmit)="updateMember()">
                     <h4>Description</h4>
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                     <h4 class="mt-2">Looking for</h4>
