added busy service

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -52,8 +52,8 @@
                     <div class="form-inline">
                         <label for="city">City: </label>
                         <input [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2">
-                        <label for="city">Contry: </label>
-                        <input [(ngModel)]="member.country" type="text" name="contry" class="form-control mx-2">
+                        <label for="city">Country: </label>
+                        <input [(ngModel)]="member.country" type="text" name="country" class="form-control mx-2">
                     </div>
                 </form>
             </tab>
