--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
-<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="large" color="#fff" type="ball-circus" [fullScreen] = "true"></ngx-spinner>
+<ngx-spinner type="pacman">
+    <h3>Loading...</h3>
+</ngx-spinner>
 
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px;">
