--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -7,7 +7,10 @@
                 (click)="setMainPhoto(photo)"
                 [ngClass]='photo.isMain ? "btn-success active" : "btn-outline-success"'
                 class="btn btn-sm">Main</button>
-            <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+            <button
+            [disabled]="photo.isMain"
+            (click)="deletePhoto(photo)"
+            class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
         </div>
     </div>
 </div>
