--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,21 +1,27 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     
     <div class="form-group">
         <input type="text" class="form-control" 
-        name="username" [(ngModel)]="model.username" 
+        formControlName='username'
         placeholder="Username">
     </div>
 
     <div class="form-group mt-3">
         <input type="password" class="form-control" 
-        name="password" [(ngModel)]="model.password" 
+        formControlName='password'
         placeholder="Password">
     </div>
 
+    <div class="form-group mt-3">
+        <input type="password" class="form-control" 
+        formControlName='confirmPassword'
+        placeholder="Confirm Password">
+    </div>
+
     <div class="form-group text-center mt-3 ">
-        <button class="btn btn-success mr-2" style="margin-right: 5px;" type="submit">Register</button>
+        <button class="btn btn-success mr-2" style="margin-right: 5px;" type="submit" [disabled]="!registerForm.valid">Register</button>
         <button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
     </div>
 </form>
