--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,21 +3,46 @@
     <hr>
     
     <div class="form-group">
-        <input type="text" class="form-control" 
-        formControlName='username'
-        placeholder="Username">
+        <input
+            [class.is-invalid]='registerForm.get("username").errors 
+                && registerForm.get("username").touched'
+            type="text" 
+            class="form-control" 
+            formControlName='username'
+            placeholder="Username">
+        <div class="invalid-feedback">Plase enter a username</div>
     </div>
 
     <div class="form-group mt-3">
-        <input type="password" class="form-control" 
-        formControlName='password'
-        placeholder="Password">
+        <input
+            [class.is-invalid]='registerForm.get("password").errors 
+                && registerForm.get("password").touched'
+            type="password" 
+            class="form-control" 
+            formControlName='password'
+            placeholder="Password">
+        
+        <div *ngIf='registerForm.get("password").hasError("required")'
+            class="invalid-feedback">Plase enter a password</div>
+        <div *ngIf='registerForm.get("password").hasError("minlength")'
+            class="invalid-feedback">Password must be at least 4 characters</div>
+        <div *ngIf='registerForm.get("password").hasError("maxlength")'
+            class="invalid-feedback">Password must be at most 12 characters</div>
     </div>
 
     <div class="form-group mt-3">
-        <input type="password" class="form-control" 
-        formControlName='confirmPassword'
-        placeholder="Confirm Password">
+        <input
+            [class.is-invalid]='registerForm.get("confirmPassword").errors 
+                && registerForm.get("confirmPassword").touched'
+            type="password" 
+            class="form-control" 
+            formControlName='confirmPassword'
+            placeholder="Confirm Password">
+
+        <div *ngIf='registerForm.get("confirmPassword").hasError("required")'
+            class="invalid-feedback">Plase enter a confirm password</div>
+        <div *ngIf='registerForm.get("confirmPassword").hasError("isMatching")'
+            class="invalid-feedback">Confirm password must match password</div>
     </div>
 
     <div class="form-group text-center mt-3 ">
