--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,6 +2,26 @@
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     
+    <div class="form-group">
+        <label class="control-label" style="margin-right: 10px;">I am a: </label>    
+        <label class="radio-inline">
+            <input type="radio" value="male" formControlName="gender"> Male
+        </label>
+        <label class="radio-inline">
+            <input type="radio" value="female" formControlName="gender" style="margin-left: 5px;"> Female
+        </label>
+    </div>
+
+    <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]='"Username"'></app-text-input>
+
+    <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" [label]='"Known As"'></app-text-input>
+
+    <app-text-input [formControl]="$any(registerForm.controls['dateOfBirth'])" [label]='"Date Of Birth"'></app-text-input>
+
+    <app-text-input [formControl]="$any(registerForm.controls['city'])" [label]='"City"'></app-text-input>
+
+    <app-text-input [formControl]="$any(registerForm.controls['country'])" [label]='"Country"'></app-text-input>
+
     <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]='"Username"'></app-text-input>
     
     <app-text-input [formControl]="$any(registerForm.controls['password'])"
