--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary" style="padding-top: 5px; padding-bottom: 5px;">
     <div class="container">
-            <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
+            <a class="navbar-brand" routerLink="/" routerLinkActive="active">Kuchinder</a>
               <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <ng-container *ngIf="accountService.currentUser$ | async">
                   <li class="nav-item">
