rework register client logic

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     
@@ -27,6 +27,14 @@
     
     <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])"
     [label]='"ConfirmPassword"' [type]='"password"'></app-text-input>
+
+    <div class="row mt-1" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">
+                {{error}}
+            </li>
+        </ul>
+    </div>
 
     <div class="form-group text-center mt-3 ">
         <button class="btn btn-success mr-2" style="margin-right: 5px;" type="submit" [disabled]="!registerForm.valid">Register</button>
