--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
     <div class="card-image-wrapper">
-        <img src="{{ member.photoUrl ?? './assets/user.png'}}" alt="{{ member.knownAs }}" class="card-img-top">
+        <img src="{{ member.photoUrl ?? './assets/Sample_User_Icon.png'}}" alt="{{ member.knownAs }}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item"><button routerLink="/members/{{ member.userName }}" class="btn btn-primary"><i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-heart"></i></button></li>
