--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img src="{{ member.photoUrl || './assets/user.png' }}" 
+            <img src="{{ member.photoUrl || './assets/Sample_User_Icon.png' }}" 
             alt="{{ member.knownAs }}" 
             class="card-img-top img-thumbnail">
             <div class="card-body">
