--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="col-4">
         <div class="card">
-            <img src="{{ member.photoUrl || './assets/user.png' }}" 
+            <img src="{{ member.photoUrl || './assets/Sample_User_Icon.png' }}" 
             alt="{{ member.knownAs }}" 
             class="card-img-top img-thumbnail">
             <div class="card-body">
