--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
               </ul>
 
               <div class="btn-group" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-                <img src="{{ user.photoUrl }}" alt="{{ user.username }}">
+                <img src="{{ user.photoUrl || './assets/Sample_User_Icon.png' }}" alt="{{ user.username }}">
                 <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                         aria-controls="dropdown-basic">Welcome {{user.username | titlecase}}<span class="caret"></span>
                 </button>
