--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -19,6 +19,10 @@
                     <p>{{ member.city }}, {{ member.country }}</p>
                 </div>
                 <div>
+                    <strong>Gender:</strong>
+                    <p> {{ member.gender | titlecase }} </p>
+                </div>
+                <div>
                     <strong>Age:</strong>
                     <p>{{ member.age }}</p>
                 </div>
