added list pagination

--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,14 +1,14 @@
 <div class="text-center mt-3">
-    <h2>{{ predicate === 'like' ? 'Members I like' : 'Members who like me' }}</h2>
+    <h2>{{ likeParams.predicate === 'like' ? 'Members I like' : 'Members who like me' }}</h2>
 </div>
 
 <div class="container mt-3">
     <div class="row">
         <div class="btn-group" name="predicate">
-            <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="predicate" (click)="loadLikes()">
+            <button class="btn btn-primary" btnRadio="liked" [(ngModel)]="likeParams.predicate" (click)="loadLikes()">
                 Members I like
             </button>
-            <button class="btn btn-primary" btnRadio="likedBy" [(ngModel)]="predicate" (click)="loadLikes()">
+            <button class="btn btn-primary" btnRadio="likedBy" [(ngModel)]="likeParams.predicate" (click)="loadLikes()">
                 Members who like me
             </button>
         </div>
@@ -19,4 +19,16 @@
             <app-member-card [member]="member"></app-member-card>
         </div>
     </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" 
+    [totalItems]="pagination.totalItems" 
+    [itemsPerPage]="pagination.itemsPerPage"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    previousText="&lsaquo;" 
+    nextText="&rsaquo;" 
+    firstText="&laquo;" 
+    lastText="&raquo;"></pagination>
 </div>
